Projeto/Compilador/tests/cases/error/T5.pas
program T5;
var
  v: array[1..3] of integer;
begin
  v[4] := 10;
end.
